--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>My GitHub Page</title>
 </head>
 <body>
+    <nav style="background-color: #333; padding: 10px;">
+  <a href="index.html" style="color: white; margin-right: 15px; text-decoration: none;">Home</a>
+  <a href="ethics.html" style="color: white; margin-right: 15px; text-decoration: none;">Ethics</a>
+  <a href="about.html" style="color: white; text-decoration: none;">About</a>
+</nav>
+>
     <h1>Welcome to My GitHub Page</h1>
     <table border="1">
         <tr>
